// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`atoms/Skeleton Circle snapshot 1`] = `
<span
  class="block bg-gray-200 dark:bg-gray-500 rounded-full w-[120px] h-[120px]"
  data-testid="skeleton"
/>
`;

exports[`atoms/Skeleton Default snapshot 1`] = `
<span
  class="block bg-gray-200 dark:bg-gray-500 rounded-md p-1 bg-clip-content w-[240px] h-[24px]"
  data-testid="skeleton"
/>
`;

exports[`atoms/Skeleton Rectangle snapshot 1`] = `
<span
  class="block bg-gray-200 dark:bg-gray-500 w-[120px] h-[120px]"
  data-testid="skeleton"
/>
`;
